# t-rust-less-ui

./: .envrc  .gitignore  .yarnclean  README.md  install-local.sh  package-lock.json  package.json  tsconfig.json  tsfmt.json  tslint.json  vite.config.ts  webpack.config.js
.github/workflows/: build.yml  release.yml
attic/: backend.ts  backend_response.ts  command_results.ts  commands.ts  debounce.ts  model.ts  service_event.ts
certs/: t-rust-less-ca.cer  t-rust-less.cer  t-rust-less.pfx
native/: Cargo.toml  build.rs  index.d.ts
native/src/: clipboard.rs  errors.rs  estimate.rs  lib.rs  otp.rs  service.rs  store.rs
src/: App.tsx  app.scss  bindings.ts  index.html  index.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  clipboard.rs  clipboard_fallback.rs  estimate.rs  lib.rs  main.rs  otp.rs  service.rs  state.rs  store.rs  view.rs
src/backend/: bindings.ts  provider.tsx  use-backend.ts
src/common/: command_results.ts  commands.ts  errors.ts  model.ts  neon-command.ts
src/components/: clipboard-control.tsx  config-add-identity.tsx  config-add-store.tsx  config-identities-list.tsx  configuration.tsx  confirm-action.tsx  field-edit-notes.tsx  field-edit-password.tsx  field-edit-recipients.tsx  field-edit-tags.tsx  field-edit-text.tsx  field-edit-totp.tsx  field-edit-type.tsx  field-edit-urls.tsx  field-notes.tsx  field-password.tsx  field-recipients.tsx  field-tags.tsx  field-text.tsx  field-totp.tsx  field-type.tsx  field-urls.tsx  list-secrets-header.tsx  list-secrets-hotkeys.tsx  list-secrets-sidebar.tsx  list-secrets.tsx  loading.tsx  main-frame.tsx  navigation.tsx  password-generator.tsx  password-input.tsx  password-strength-details.tsx  password-strength-view.tsx  secret-create-menu.tsx  secret-detail-view.tsx  secret-edit-view.tsx  secret-entry-list.tsx  secret-versions-select.tsx  unlock-store.tsx  zoom-display.tsx
src/components/lookup/: lookup.tsx  secret-list.tsx
src/components/ui/: constraints.ts  flex-item.tsx  flex.tsx  grid-item.tsx  grid.tsx  muted.tsx  nowrap.tsx
src/components/unlock/: unlock.tsx
src/contexts/: backend-tauri.ts  browse-state.tsx  error-state.tsx  main-state.tsx
src/helpers/: types.ts
src/i18n/: en.tsx  index.ts  index.tsx  translations.ts
src/layout/: scroll-box.tsx
src/machines/: actions.ts  backend-tauri.ts  config.ts  display-secret.ts  edit-secret.ts  locked.ts  main.ts  otp-monitor.ts  state.ts  status-monitor.ts  unlocked.ts
src/main/: app-package.json  backend-neon.ts  backend.ts  backend_response.ts  index.ts
src/renderer/: app.scss  backend.ts  index.html  index.tsx  preload.js  store.ts
src/renderer/actions/: actions.ts  actors.ts  backend.ts  bindable.ts  navigation.ts  service-action-creators.ts  service-actions.ts  store-action-creators.ts  store-actions.ts
src/renderer/components/: config-add-identity.tsx  config-add-store.tsx  config-identities-list.tsx  configuration.tsx  confirm-action.tsx  field-edit-notes.tsx  field-edit-password.tsx  field-edit-recipients.tsx  field-edit-tags.tsx  field-edit-text.tsx  field-edit-type.tsx  field-note.tsx  field-notes.tsx  field-password.tsx  field-recipients.tsx  field-tags.tsx  field-text.tsx  field-totp.tsx  field-type.tsx  field-urls.tsx  list-secrets-header.tsx  list-secrets-hotkeys.tsx  list-secrets-sidebar.tsx  list-secrets.tsx  main-frame.tsx  password-generator.tsx  password-input.tsx  password-strength-details.tsx  password-strength-view.tsx  unlock-store.tsx  (+7 more)
src/styles/: _spacing.scss
(+42 files in other folders)
