[package]
name = "t-rust-less-binding"
version = "0.1.2"
build = "build.rs"
edition = "2018"

[lib]
name = "t_rust_less_binding"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "=0.4.0"

[dependencies]
neon =  "=0.4.0"
neon-serde = "=0.4.0"
serde = "1"
serde_derive = "1"
t-rust-less-lib = "0.1.9"
chrono = { version = "0", features = ["serde"] }
