[package]
name = "t-rust-less-binding"
version = "0.1.3"
edition = "2018"

[lib]
name = "t_rust_less_binding"
crate-type = ["cdylib"]

[dependencies]
neon =  { version = "0.8", features = [ "napi-6" ], default-features = false }
neon-serde = "0.8"
serde = "1"
serde_derive = "1"
t-rust-less-lib = "0.1.15"
chrono = { version = "0", features = ["serde"] }

[patch.crates-io]
neon-serde = { git = "https://github.com/untoldwind/neon-serde.git"}
