[package]
name = "t-rust-less-binding"
version = "0.2.0"
edition = "2018"

[lib]
name = "t_rust_less_binding"
crate-type = ["cdylib"]

[dependencies]
neon =  { version = "0.8", features = [ "napi-6" ], default-features = false }
neon-serde = "0.8"
serde = "1"
serde_derive = "1"
t-rust-less-lib = "0.2.0"
chrono = { version = "0", features = ["serde"] }

[patch.crates-io]
neon-serde = { git = "https://github.com/untoldwind/neon-serde.git"}
