[package]
name = "t-rust-less-ui"
version = "0.2.14"
description = "T-Rust-Less"
authors = ["Untoldwind <landru@untoldwind.net>"]
license = ""
repository = ""
default-run = "t-rust-less-ui"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
t-rust-less-lib = "0.2.15"
serde_derive = "1"
chrono = { version = "0", features = ["serde"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
