[package]
name = "t-rust-less-ui"
version = "0.2.15"
description = "T-Rust-Less"
authors = ["Untoldwind <landru@untoldwind.net>"]
license = ""
repository = ""
default-run = "t-rust-less-ui"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "t_rust_less_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
t-rust-less-lib = "0.2.23"
serde_derive = "1"
chrono = { version = "0", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[patch.crates-io]
t-rust-less-lib = { path = "../../t-rust-less/lib" }
